// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update UpdateEntitiesIds should support id update: id updated false 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
  },
  "ids": Array [
    1,
  ],
}
`;

exports[`update UpdateEntitiesIds should support id update: id updated true 1`] = `
Object {
  "entities": Object {
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 1",
    },
  },
  "ids": Array [
    2,
  ],
}
`;

exports[`update UpdateEntitiesIds should update entity after changing the id: id updated true, completed true 1`] = `
Object {
  "entities": Object {
    "2": Object {
      "completed": true,
      "id": 2,
      "title": "todo 1",
    },
  },
  "ids": Array [
    2,
  ],
}
`;

exports[`update UpdateEntitiesIds should update multiple ids: ids updated false 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 2",
    },
    "3": Object {
      "completed": false,
      "id": 3,
      "title": "todo 3",
    },
  },
  "ids": Array [
    1,
    2,
    3,
  ],
}
`;

exports[`update UpdateEntitiesIds should update multiple ids: ids updated true 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
    "4": Object {
      "completed": false,
      "id": 4,
      "title": "todo 2",
    },
    "5": Object {
      "completed": false,
      "id": 5,
      "title": "todo 3",
    },
  },
  "ids": Array [
    1,
    4,
    5,
  ],
}
`;

exports[`update UpdateEntitiesIds should work with ref: id updated false 1`] = `
Object {
  "UIEntities": Object {
    "1": Object {
      "id": 1,
      "open": false,
    },
  },
  "UIIds": Array [
    1,
  ],
}
`;

exports[`update UpdateEntitiesIds should work with ref: id updated true 1`] = `
Object {
  "UIEntities": Object {
    "2": Object {
      "id": 2,
      "open": false,
    },
  },
  "UIIds": Array [
    2,
  ],
}
`;

exports[`update Upsert should add the entity if it doesn't exists: one entities 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
  },
  "ids": Array [
    1,
  ],
}
`;

exports[`update Upsert should update the entity if it has the same id: updated entity with completed: true 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": true,
      "id": 1,
      "title": "todo 1",
    },
  },
  "ids": Array [
    1,
  ],
}
`;

exports[`update Upsert should work with ref: one ui entity, open true 1`] = `
Object {
  "UIEntities": Object {
    "1": Object {
      "id": 1,
      "open": true,
    },
  },
  "UIIds": Array [
    1,
  ],
}
`;

exports[`update UpsertById should add the entity if it doesn't exists: two entities 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 2",
    },
  },
  "ids": Array [
    1,
    2,
  ],
}
`;

exports[`update UpsertById should add the missing entities and update existing: two entities, 1: title "elf", 2: title "todo 2" 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "elf",
    },
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 2",
    },
  },
  "ids": Array [
    1,
    2,
  ],
}
`;

exports[`update UpsertById should merge updater with creator: two entities, title "elf" 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "elf",
    },
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "elf",
    },
  },
  "ids": Array [
    1,
    2,
  ],
}
`;

exports[`update UpsertById should update an entity if exists: one entity, title "elf" 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "elf",
    },
  },
  "ids": Array [
    1,
  ],
}
`;

exports[`update UpsertById should work with ref: two entities, open true 1`] = `
Object {
  "UIEntities": Object {
    "1": Object {
      "id": 1,
      "open": false,
    },
    "2": Object {
      "id": 2,
      "open": false,
    },
  },
  "UIIds": Array [
    1,
    2,
  ],
}
`;

exports[`update should update all: completed false 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 2",
    },
  },
  "ids": Array [
    1,
    2,
  ],
}
`;

exports[`update should update all: completed true 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": true,
      "id": 1,
      "title": "todo 1",
    },
    "2": Object {
      "completed": true,
      "id": 2,
      "title": "todo 2",
    },
  },
  "ids": Array [
    1,
    2,
  ],
}
`;

exports[`update should update by callback: completed false 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
  },
  "ids": Array [
    1,
  ],
}
`;

exports[`update should update by callback: completed true 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": true,
      "id": 1,
      "title": "todo 1",
    },
  },
  "ids": Array [
    1,
  ],
}
`;

exports[`update should update by predicate: completed false 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 2",
    },
  },
  "ids": Array [
    1,
    2,
  ],
}
`;

exports[`update should update by predicate: completed true 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": true,
      "id": 1,
      "title": "todo 1",
    },
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 2",
    },
  },
  "ids": Array [
    1,
    2,
  ],
}
`;

exports[`update should update multiple entities: multi completed false 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 2",
    },
  },
  "ids": Array [
    1,
    2,
  ],
}
`;

exports[`update should update multiple entities: multi completed true 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": true,
      "id": 1,
      "title": "todo 1",
    },
    "2": Object {
      "completed": true,
      "id": 2,
      "title": "todo 2",
    },
  },
  "ids": Array [
    1,
    2,
  ],
}
`;

exports[`update should update one entity: completed false 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
  },
  "ids": Array [
    1,
  ],
}
`;

exports[`update should update one entity: completed true 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": true,
      "id": 1,
      "title": "todo 1",
    },
  },
  "ids": Array [
    1,
  ],
}
`;

exports[`update should work with ref update all: open false 1`] = `
Object {
  "UIEntities": Object {
    "1": Object {
      "id": 1,
      "open": false,
    },
    "2": Object {
      "id": 2,
      "open": false,
    },
  },
  "UIIds": Array [
    1,
    2,
  ],
}
`;

exports[`update should work with ref update all: open true 1`] = `
Object {
  "UIEntities": Object {
    "1": Object {
      "id": 1,
      "open": true,
    },
    "2": Object {
      "id": 2,
      "open": true,
    },
  },
  "UIIds": Array [
    1,
    2,
  ],
}
`;

exports[`update should work with ref: open false 1`] = `
Object {
  "UIEntities": Object {
    "1": Object {
      "id": 1,
      "open": false,
    },
    "2": Object {
      "id": 2,
      "open": false,
    },
  },
  "UIIds": Array [
    1,
    2,
  ],
}
`;

exports[`update should work with ref: open true 1`] = `
Object {
  "UIEntities": Object {
    "1": Object {
      "id": 1,
      "open": true,
    },
    "2": Object {
      "id": 2,
      "open": false,
    },
  },
  "UIIds": Array [
    1,
    2,
  ],
}
`;
